--- a/00-embeddings/create_embeddings.ipynb
+++ b/00-embeddings/create_embeddings.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "8fb2df7f",
+   "metadata": {},
+   "source": [
+    "# Creación de Embeddings de Texto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e19b6920",
+   "metadata": {},
+   "source": [
+    "Configuración del cliente OpenAI y carga de variables de entorno para generar embeddings."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0",
@@ -20,6 +36,14 @@
     ")\n",
     "MODEL_NAME = \"openai/text-embedding-3-small\"\n",
     "MODEL_DIMENSIONS = 1536"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb11ab83",
+   "metadata": {},
+   "source": [
+    "Generación de un embedding para el texto \"hello world\" y visualización de su dimensión y datos."
    ]
   },
   {
