--- a/01-multimodal/multimodal_vectors.ipynb
+++ b/01-multimodal/multimodal_vectors.ipynb
@@ -4,9 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multi-modal vector embeddings\n",
+    "# Embeddings Vectoriales Multimodales\n",
     "\n",
-    "A vector embedding can also represent non-textual data, such as images."
+    "Un embedding vectorial también puede representar datos no textuales, como imágenes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Configuración de la API de Azure Computer Vision y funciones auxiliares para obtener embeddings de imágenes."
    ]
   },
   {
@@ -49,6 +56,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Procesamiento de todas las imágenes en el directorio \"./data\", generando sus embeddings y guardándolos en un archivo JSON."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -75,12 +89,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Image.open(\"./data/planeMotor.png\")"
+    "Carga y visualización de una imagen de ejemplo (\"planeMotor.png\") y verificación de su vector generado."
    ]
   },
   {
@@ -89,7 +101,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vectors[\"planeMotor.png\"]"
+    "Image.open(\"./data/perro-1.jpg\")"
    ]
   },
   {
@@ -98,14 +110,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(vectors[\"planeMotor.png\"])"
+    "vectors[\"perro-1.jpg\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(vectors[\"perro-1.jpg\"])"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Multi-modal Vectors Analysis\n"
+    "# Análisis de Vectores Multimodales"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Carga de los vectores de imágenes previamente generados desde el archivo JSON."
    ]
   },
   {
@@ -122,7 +150,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Most similar to a target image\n"
+    "## Más similar a una imagen objetivo"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Definición de funciones para calcular la similitud del coseno y encontrar las imágenes más similares a un vector dado."
    ]
   },
   {
@@ -147,13 +182,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Visualización de la imagen objetivo y búsqueda de las 3 imágenes más similares en el conjunto de datos."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Render the target image\n",
-    "target_image = \"planeMotor.png\"\n",
+    "target_image = \"perro-1.jpg\"\n",
     "plt.imshow(plt.imread(f\"./data/{target_image}\"))\n"
    ]
   },
@@ -184,7 +226,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Search with text\n"
+    "## Búsqueda con texto"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Función para convertir texto en un vector embedding utilizando la API de Azure."
    ]
   },
   {
@@ -202,12 +251,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Búsqueda de imágenes similares utilizando un término de texto (ej. \"Wing\") y visualización de los resultados."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding = get_text_embedding(\"Wing\") # Examples: \"Motor\" \"Shoe\" \"Plane\"\n",
+    "embedding = get_text_embedding(\"Agua\") # Examples: \"Bebe\" \"Sabana\" \"Pelo\"\n",
     "most_similar_df = most_similar(embedding, image_vectors)\n",
     "\n",
     "for image_name in most_similar_df['vector key'][0:3]:\n",
