--- a/01-multimodal/multimodal_vectors.ipynb
+++ b/01-multimodal/multimodal_vectors.ipynb
@@ -32,8 +32,8 @@
     "dotenv.load_dotenv()\n",
     "\n",
     "# API Key authentication\n",
-    "AZURE_AIVISION_API_KEY = \"\"\n",
-    "AZURE_COMPUTER_VISION_URL = f\"https://multimodalaiservice.cognitiveservices.azure.com/\"\n",
+    "AZURE_AIVISION_API_KEY = os.environ[\"AZURE_AIVISION_API_KEY\"]\n",
+    "AZURE_COMPUTER_VISION_URL = os.environ[\"AZURE_COMPUTER_VISION_URL\"]\n",
     "\n",
     "def get_model_params():\n",
     "    return {\"api-version\": \"2024-02-01\", \"model-version\": \"2023-04-15\"}\n",
@@ -72,8 +72,8 @@
     "\n",
     "vectors = {}\n",
     "for image_file in os.listdir(\"./data\"):\n",
-    "    # Filter only .png files (case-insensitive)\n",
-    "    if image_file.lower().endswith('.png'):\n",
+    "    # Filter only .jpg files (case-insensitive)\n",
+    "    if image_file.lower().endswith('.jpg'):\n",
     "        image_path = f\"./data/{image_file}\"\n",
     "        try:\n",
     "            image_embedding = get_image_embedding(image_path)\n",
@@ -263,7 +263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding = get_text_embedding(\"Agua\") # Examples: \"Bebe\" \"Sabana\" \"Pelo\"\n",
+    "embedding = get_text_embedding(\"Pelo\") # Examples: \"Bebe\" \"Sabana\"\n",
     "most_similar_df = most_similar(embedding, image_vectors)\n",
     "\n",
     "for image_name in most_similar_df['vector key'][0:3]:\n",
@@ -275,7 +275,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -289,7 +289,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
