--- a/04-document-ingestion/rag_documents_ingestion.ipynb
+++ b/04-document-ingestion/rag_documents_ingestion.ipynb
@@ -310,7 +310,7 @@
     "            \n",
     "            # Crear estructura de chunk con todos los metadatos\n",
     "            chunk_data = {\n",
-    "                \"id\": f\"{filename}-{i}\",\n",
+    "                \"id\": f\"{filename.replace('.', '_')}-{i}\",\n",
     "                \"content\": text_content,\n",
     "                \"category\": filename.replace(\".pdf\", \"\"),  # Nombre del archivo sin extensión\n",
     "                \"source\": \"pdf_ingestion\",  # Fuente del documento\n",
@@ -466,7 +466,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -480,7 +480,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.14"
   }
  },
  "nbformat": 4,
