modified .env logic

--- a/00-embeddings/create_embeddings.ipynb
+++ b/00-embeddings/create_embeddings.ipynb
@@ -22,7 +22,23 @@
    "id": "0",
    "metadata": {},
    "outputs": [],
-   "source": "import os\nfrom openai import AzureOpenAI\nimport dotenv\n\ndotenv.load_dotenv()\n\n# Initialize Azure OpenAI client\nopenai_client = AzureOpenAI(\n    api_key=os.environ[\"AZURE_OPENAI_API_KEY\"],\n    api_version=os.environ[\"AZURE_OPENAI_API_VERSION\"],\n    azure_endpoint=os.environ[\"AZURE_OPENAI_ENDPOINT\"]\n)\n\nEMBEDDING_DEPLOYMENT = os.environ[\"AZURE_OPENAI_DEPLOYMENT_EMBEDDING\"]\nprint(f\"Usando Azure OpenAI con modelo: {EMBEDDING_DEPLOYMENT}\")"
+   "source": [
+    "import os\n",
+    "from openai import AzureOpenAI\n",
+    "import dotenv\n",
+    "\n",
+    "dotenv.load_dotenv()\n",
+    "\n",
+    "# Initialize Azure OpenAI client\n",
+    "openai_client = AzureOpenAI(\n",
+    "    api_key=os.environ[\"AZURE_OPENAI_API_KEY\"],\n",
+    "    api_version=os.environ[\"AZURE_OPENAI_API_VERSION\"],\n",
+    "    azure_endpoint=os.environ[\"AZURE_OPENAI_ENDPOINT\"]\n",
+    ")\n",
+    "\n",
+    "EMBEDDING_DEPLOYMENT = os.environ[\"AZURE_OPENAI_DEPLOYMENT_EMBEDDING\"]\n",
+    "print(f\"Usando Azure OpenAI con modelo: {EMBEDDING_DEPLOYMENT}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -38,7 +54,16 @@
    "id": "1",
    "metadata": {},
    "outputs": [],
-   "source": "embeddings_response = openai_client.embeddings.create(\n    model=EMBEDDING_DEPLOYMENT,\n    input=\"hello world\",\n)\nembedding = embeddings_response.data[0].embedding\n\nprint(f\"Dimensiones del embedding: {len(embedding)}\")\nprint(f\"Primeros 10 valores: {embedding[:10]}\")"
+   "source": [
+    "embeddings_response = openai_client.embeddings.create(\n",
+    "    model=EMBEDDING_DEPLOYMENT,\n",
+    "    input=\"hello world\",\n",
+    ")\n",
+    "embedding = embeddings_response.data[0].embedding\n",
+    "\n",
+    "print(f\"Dimensiones del embedding: {len(embedding)}\")\n",
+    "print(f\"Primeros 10 valores: {embedding[:10]}\")"
+   ]
   }
  ],
  "metadata": {
