--- a/01-multimodal/multimodal_vectors.ipynb
+++ b/01-multimodal/multimodal_vectors.ipynb
@@ -45,14 +45,15 @@
     "    url = f\"{AZURE_COMPUTER_VISION_URL}/computervision/retrieval:vectorizeImage\"\n",
     "    headers = get_auth_headers()\n",
     "    headers[\"Content-Type\"] = \"application/octet-stream\"\n",
-    "    \n",
     "    # Read the image file as binary data and send directly\n",
     "    with open(image_file, \"rb\") as image_data:\n",
     "        response = requests.post(url, headers=headers, params=get_model_params(), data=image_data)\n",
     "    \n",
     "    if response.status_code != 200:\n",
     "        print(image_file, response.status_code, response.json())\n",
-    "    return response.json()[\"vector\"]\n"
+    "    return response.json()[\"vector\"]\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -67,13 +68,32 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": "import json\n\nvectors = {}\nfor image_file in os.listdir(\"./data\"):\n    # Filter only .jpg files (case-insensitive)\n    if image_file.lower().endswith('.jpg'):\n        image_path = f\"./data/{image_file}\"\n        try:\n            image_embedding = get_image_embedding(image_path)\n            vectors[image_file] = image_embedding\n            print(f\"Procesado: {image_file}\")\n        except Exception as e:\n            print(f\"Error con {image_file}: {e}\")\n\n# save the embeddings to a file\nwith open(\"./data/images_ai-vision.json\", \"w\") as f:\n    json.dump(vectors, f)\n    "
+   "source": [
+    "import json\n",
+    "\n",
+    "vectors = {}\n",
+    "for image_file in os.listdir(\"./data\"):\n",
+    "    # Filter only .jpg files (case-insensitive)\n",
+    "    if image_file.lower().endswith('.jpg'):\n",
+    "        image_path = f\"./data/{image_file}\"\n",
+    "        try:\n",
+    "            image_embedding = get_image_embedding(image_path)\n",
+    "            vectors[image_file] = image_embedding\n",
+    "            print(f\"Procesado: {image_file}\")\n",
+    "        except Exception as e:\n",
+    "            print(f\"Error con {image_file}: {e}\")\n",
+    "\n",
+    "# save the embeddings to a file\n",
+    "with open(\"./data/images_ai-vision.json\", \"w\") as f:\n",
+    "    json.dump(vectors, f)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Carga y visualización de una imagen de ejemplo (\"planeMotor.png\") y verificación de su vector generado."
+    "Carga y visualización de una imagen de ejemplo (\"perro-1.jpg\") y verificación de su vector generado."
    ]
   },
   {
@@ -244,7 +264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "embedding = get_text_embedding(\"Pelo\") # Examples: \"Bebe\" \"Sabana\"\n",
+    "embedding = get_text_embedding(\"Ocean\") # Examples: \"Bebe\" \"Sabana\" \"Ocean\"\n",
     "most_similar_df = most_similar(embedding, image_vectors)\n",
     "\n",
     "for image_name in most_similar_df['vector key'][0:3]:\n",
